# Agentic-AI-Design-Patterns-CrewAI-Flow-with-Prompt-Chaining-and-Router-Pattern

./: fun_fact.md  pyproject.toml
src/pr7/: main.py  main2.py
